change images url

--- a/posts/10-tips-sederhana-untuk-mengurangi-kecanduan-game.mdx
+++ b/posts/10-tips-sederhana-untuk-mengurangi-kecanduan-game.mdx
@@ -1,10 +1,10 @@
 ---
-slug: '10-tips-sederhana-untuk-mengurangi-kecanduan-game'
-title: '10 Tips Sederhana Untuk Mengurangi Kecanduan Game'
+slug: "10-tips-sederhana-untuk-mengurangi-kecanduan-game"
+title: "10 Tips Sederhana Untuk Mengurangi Kecanduan Game"
 featuredpost: false
-featuredimage: ''
-featuredimageurl: 'https://img.jakpost.net/c/2018/01/04/2018_01_04_38344_1515040071._large.jpg'
-excerpt: 'Tidak ada satupun di dunia ini yang baik jika dilakukan secara berlebihan, begitu juga dengan aktifitas gaming yang digandrungi banyak kalangan ini.'
+featuredimage: ""
+featuredimageurl: "https://res.cloudinary.com/yacloud/image/upload/v1624709221/articles%20pictures/2020-05-01-10-tips-sederhana-untuk-mengurangi-kecanduan-game/jakpost_kecanduan_game_jajnny.jpg"
+excerpt: "Tidak ada satupun di dunia ini yang baik jika dilakukan secara berlebihan, begitu juga dengan aktifitas gaming yang digandrungi banyak kalangan ini."
 date: 2020-05-01
 author: aisyah-dhianisa
 tags: lifestyle
