--- a/posts/dibalik-sudoku.mdx
+++ b/posts/dibalik-sudoku.mdx
@@ -1,10 +1,10 @@
 ---
-slug: 'dibalik-sudoku'
-title: 'Dibalik Sudoku'
+slug: "dibalik-sudoku"
+title: "Dibalik Sudoku"
 featuredpost: false
-featuredimage: ''
-featuredimageurl: 'https://res.cloudinary.com/yacloud/image/upload/v1618839089/articles%20pictures/leonhard-euler_ugcl4b.jpg'
-excerpt: 'Game yang mengasah logika, mengasah kepintaran dalam mengotak-atik angka. Memainkannya membutuh konsentrasi dan kesabaran penuh.'
+featuredimage: ""
+featuredimageurl: "https://res.cloudinary.com/yacloud/image/upload/v1624709183/articles%20pictures/2020-05-01-dibalik-sudoku/LeonhardEuler_r35z0h.jpg"
+excerpt: "Game yang mengasah logika, mengasah kepintaran dalam mengotak-atik angka. Memainkannya membutuh konsentrasi dan kesabaran penuh."
 date: 2020-05-01
 author: deyafri
 tags: tokoh
