--- a/posts/everything-in-between.mdx
+++ b/posts/everything-in-between.mdx
@@ -1,10 +1,10 @@
 ---
-slug: 'everything-in-between'
-title: 'Everything in Between'
+slug: "everything-in-between"
+title: "Everything in Between"
 featuredpost: false
-featuredimage: ''
-featuredimageurl: 'https://res.cloudinary.com/yacloud/image/upload/v1621236728/articles%20pictures/everything-in-between-pic_o1j1we.png'
-excerpt: 'Kami menamakan perjalanan kami Everything in Between: karena ini adalah cara terbaik untuk menemukan semua yang ada di antara dua negara asal kami.'
+featuredimage: ""
+featuredimageurl: "https://res.cloudinary.com/yacloud/image/upload/v1624708914/articles%20pictures/2021-05-23-everything-in-between/everything-in-between-pic_becsf1.png"
+excerpt: "Kami menamakan perjalanan kami Everything in Between: karena ini adalah cara terbaik untuk menemukan semua yang ada di antara dua negara asal kami."
 date: 2021-05-23
 author: amara-salsabila
 tags: opini
