--- a/posts/jejak-sang-pencinta-sejati-di-bursa.mdx
+++ b/posts/jejak-sang-pencinta-sejati-di-bursa.mdx
@@ -2,8 +2,8 @@
 slug: jejak-sang-pencinta-sejati-di-bursa
 title: Jejak Sang Pencinta Sejati di Bursa
 featuredpost: false
-featuredimage: /images/jejak-sang-pencinta-sejati-di-bursa.png
-excerpt: 'Dalam kehidupan kita, banyak sekali hal-hal yang dapat kita lakukan untuk sekedar melarikan diri dari penatnya rutinitas yang kita jalani sehari-hari.'
+featuredimageurl: https://res.cloudinary.com/yacloud/image/upload/v1624708851/articles%20pictures/2019-03-02-jejak-sang-pencinta-sejati-di-bursa/jejak-sang-pencinta-sejati-di-bursa_skxwmp.jpg
+excerpt: "Dalam kehidupan kita, banyak sekali hal-hal yang dapat kita lakukan untuk sekedar melarikan diri dari penatnya rutinitas yang kita jalani sehari-hari."
 date: 2019-03-02
 author: ahsanah-nur-amalia
 tags: plesiran
@@ -23,7 +23,7 @@ Ketika menari, para penari melakukan gerakan memutar berlawanan dengan arah jaru
 tari Sema ini. Tepatnya di Karabaş-ı Veli Dergahı Kültür Merkezi yang berada di Maksem Mahallesi, 5. Çardak Sk. No:2/1, 16040
 Osmangazi / Bursa.
 
-![Karabaş-ı Veli Dergahı Kültür Merkezi](/images/jejak-sang-pencinta-sejati-di-bursa-2.png)
+![Karabaş-ı Veli Dergahı Kültür Merkezi](https://res.cloudinary.com/yacloud/image/upload/v1624708850/articles%20pictures/2019-03-02-jejak-sang-pencinta-sejati-di-bursa/jejak-sang-pencinta-sejati-di-bursa-2_xjtvxg.jpg)
 
 Bangunan ini telah berdiri sekitar 450 tahun lamanya. Pada masa awalnya digunakan untukmempelajari tarekat halwatiyah dan kini digunakan untuk tarekat Mawlawiyah. Di sisi kanannya terdapat makam-makam dari para wali pendahulu. Didalamnya juga terdapat perpustakaan mini serta ruang tamu untuk tamutamu penting. Di ini tarian sufi juga ditarikan oleh penari dari berbagai usia. Mereka mempelajari tarian ini selama 3 sampai 4 bulan. Pertunjukan tari sufi diadakan setiap malam dan dimulai dari pukul 21.00 serta berlangsung selama setengah jam. Penonton laki-laki di lantai bawah dan perempuan di lantai atas.
 
