--- a/posts/manuwan.mdx
+++ b/posts/manuwan.mdx
@@ -1,38 +1,38 @@
 ---
-slug: 'manuwan'
-title: 'Manuwan'
+slug: "manuwan"
+title: "Manuwan"
 date: 2021-05-06
 author: dammy
-featuredimageurl: 'https://images.unsplash.com/photo-1487260211189-670c54da558d?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=334&q=80'
-imgsource: 'unsplash.com/@emileseguin'
+featuredimageurl: "https://res.cloudinary.com/yacloud/image/upload/v1624709298/articles%20pictures/2021-05-06-manuwan/manuwan_gfsroe.jpg"
+imgsource: "unsplash.com/@emileseguin"
 tags: art
 ---
 
 <div>Semena-mena manusia bernama hewan</div>
 <div>Menjadikan kebebasan sebagai komoditas dagangan</div>
 <div>Dengan kekuatan dan kekerasan</div>
-<div className='end-p'>Menjamah dan merenggut hak yang Pangeran berikan</div>
+<div className="end-p">Menjamah dan merenggut hak yang Pangeran berikan</div>
 
 <div>Betapa bodohnya manusia bernama hewan</div>
 <div>Merampas apa yang tidak pernah diberikan</div>
 <div>Bertindak seakan-akan replika Yang Maha Kuasa</div>
-<div className='end-p'>Padahal tanpa daya dan bukan apa-apa</div>
+<div className="end-p">Padahal tanpa daya dan bukan apa-apa</div>
 
 <div>Betapa lucunya manusia bernama hewan</div>
 <div>Untuk selalu bisa kita lihat di penangkaran</div>
 <div>Bersama-sama seakan mampu menaklukan dunia</div>
-<div className='end-p'>
+<div className="end-p">
   Padahal untuk mengambil nafas saja mereka meronta-ronta
 </div>
 
 <div>Betapa uniknya manusia bernama hewan</div>
 <div>Demi secuil bahan kotoran, membunuh adalah relevan</div>
 <div>Dari mulut kotornya itu keluar kebijaksanaan</div>
-<div className='end-p'>Penuh rekayasa dan pemaksaan</div>
+<div className="end-p">Penuh rekayasa dan pemaksaan</div>
 
 <div>Betapa ruginya manusia bernama hewan</div>
 <div>Yang tidak seperti hewan bernama manusia</div>
 <div>Yang mengerti hakikat dari kemerdekaan</div>
-<div className='end-p'>
+<div className="end-p">
   Yang rela berbagi tanpa memandang itu kawan atau lawan
 </div>
