--- a/posts/marsinah-perempuan-yang-abadi-bersama-waktu.mdx
+++ b/posts/marsinah-perempuan-yang-abadi-bersama-waktu.mdx
@@ -1,9 +1,9 @@
 ---
-slug: 'marsinah-perempuan-yang-abadi-bersama-waktu'
-title: 'Marsinah: Perempuan yang Abadi Bersama Waktu'
+slug: "marsinah-perempuan-yang-abadi-bersama-waktu"
+title: "Marsinah: Perempuan yang Abadi Bersama Waktu"
 featuredpost: false
-featuredimageurl: https://assets-a2.kompasiana.com/items/album/2018/05/08/malam-5af11808bde57564533527b2.jpg?t=o&v=760
-excerpt: Marsinah, perempuan yang berani. Lantang suaranya menentang kesewenang-wenangan. Sosok perempuan yang tulus dan setia kawan.
+featuredimageurl: "https://res.cloudinary.com/yacloud/image/upload/v1624709334/articles%20pictures/2020-04-01-marsinah-perempuan-yang-abadi-bersama-waktu/marsinah_bygcjj.jpg"
+excerpt: "Marsinah, perempuan yang berani. Lantang suaranya menentang kesewenang-wenangan. Sosok perempuan yang tulus dan setia kawan."
 date: 2020-04-01
 author: dammy
 tags: tokoh
