--- a/posts/menghadapi-fenomena-malas-menulis.mdx
+++ b/posts/menghadapi-fenomena-malas-menulis.mdx
@@ -1,8 +1,8 @@
 ---
-slug: 'menghadapi-fenomena-malas-menulis'
-title: 'Menghadapi Fenomena Malas Menulis'
+slug: "menghadapi-fenomena-malas-menulis"
+title: "Menghadapi Fenomena Malas Menulis"
 featuredpost: false
-featuredimageurl: https://images.unsplash.com/photo-1455390582262-044cdead277a?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MTB8fHdyaXRlcnxlbnwwfHwwfA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60
+featuredimageurl: "https://res.cloudinary.com/yacloud/image/upload/v1624709416/articles%20pictures/2020-02-03-menghadapi-fenomena-malas-menulis/malas_menulis_reuzuz.jpg"
 excerpt: Dalam keseharian kita, para jurnalis yang terlibat di dunia tulis-menulis pasti akan mengalami masa di mana mood untuk membuat karya tulis menurun.
 date: 2020-02-03
 author: hisyam-azhari
