--- a/posts/mengintip-tradisi-unik-lebaran-di-berbagai-negara.mdx
+++ b/posts/mengintip-tradisi-unik-lebaran-di-berbagai-negara.mdx
@@ -1,11 +1,11 @@
 ---
-slug: 'mengintip-tradisi-unik-lebaran-di-berbagai-negara'
-title: 'Mengintip Tradisi Unik Lebaran di Berbagai Negara'
+slug: "mengintip-tradisi-unik-lebaran-di-berbagai-negara"
+title: "Mengintip Tradisi Unik Lebaran di Berbagai Negara"
 featuredpost: false
-featuredimage: ''
-featuredimageurl: 'https://images.unsplash.com/photo-1620795541878-62d9eaf5b56c?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80'
-imgsource: 'unsplash.com/@mufidpwt'
-excerpt: 'Suasana Lebaran masih saja terasa meskipun kita sudah sama-sama merayakannya beberapa hari yang lalu. Pasti kamu sudah menerima pertanyaan “kapan naik ke pelaminan?” atau berbagai pertanyaan lainnya yang kadang bikin kepala kita hampir mendidih menanggapinya.'
+featuredimage: ""
+featuredimageurl: "https://res.cloudinary.com/yacloud/image/upload/v1624709472/articles%20pictures/2021-05-17-mengintip-tradisi-unik-lebaran-di-berbagai-negara%20/lebaran_nszclj.jpg"
+imgsource: "unsplash.com/@mufidpwt"
+excerpt: "Suasana Lebaran masih saja terasa meskipun kita sudah sama-sama merayakannya beberapa hari yang lalu. Pasti kamu sudah menerima pertanyaan “kapan naik ke pelaminan?” atau berbagai pertanyaan lainnya yang kadang bikin kepala kita hampir mendidih menanggapinya."
 date: 2021-05-17
 author: bayu-adji-nugraha
 tags: religion
@@ -17,7 +17,7 @@ Kalau kamu merasa belum mendapatkan pertanyaan semacam itu, tenang saja, mungkin
 
 Sepertinya memberikan pertanyaan semacam itu kepada pemuda yang masih nyaman melajang sudah menjadi tradisi yang mewarnai Lebaran di Indonesia, sama halnya seperti mudik dan juga ketupat. Namun, apakah iya, anak muda di belahan dunia lain juga ditodong pertanyaan yang sama seperti kita? Sepertinya topik ini menarik untuk kita bahas bersama, sekaligus menambah wawasan kita tentang tradisi Lebaran di berbagai negara lain. Ayo kita mulai!
 
-![Manisan turki](https://res.cloudinary.com/yacloud/image/upload/v1621239989/articles%20pictures/lebaran1_uea1qm.png)
+![Manisan turki](https://res.cloudinary.com/yacloud/image/upload/v1624709473/articles%20pictures/2021-05-17-mengintip-tradisi-unik-lebaran-di-berbagai-negara%20/lebaran1_ae79zg.png)
 
 ### Lebaran di Turki dan Mengenal Budaya Şeker Bayramı
 
@@ -31,7 +31,7 @@ Biasanya orang-orang akan mengenakan pakaian khas yang disebut “_bayramlık”
 
 Selain “_Ramazan bayramı_”, Lebaran di Turki juga bisa disebut sebagai “_şeker bayramı_” yang artinya adalah “pesta permen” dalam bahasa Indonesia. Tentu saja anak-anak pasti merasa kegirangan, karena orang dewasa biasanya membagikan makanan berupa coklat, permen, uang koin, dan berbagai makanan manis lainnya. Ternyata Lebaran di Indonesia maupun di Turki sepertinya sama-sama bisa bikin gemuk.
 
-![Suasanan perayaan lebaran di Arab Saudi](https://res.cloudinary.com/yacloud/image/upload/v1621239976/articles%20pictures/lebaran2_ktdot7.png)
+![Suasanan perayaan lebaran di Arab Saudi](https://res.cloudinary.com/yacloud/image/upload/v1624709473/articles%20pictures/2021-05-17-mengintip-tradisi-unik-lebaran-di-berbagai-negara%20/lebaran2_wevejc.png)
 
 ### Merayakan Lebaran dengan Pagelaran Seni di Arab Saudi
 
@@ -39,7 +39,7 @@ Tradisi Lebaran di Arab Saudi bisa dibilang sangat menarik. Saat hari Idulfitri 
 
 Untuk hidangan, pastinya Arab Saudi juga memiliki menu makanan yang unik. Selain manisan seperti coklat dan permen yang sudah pasti ada di saat Lebaran, makanan khas lainnya yang biasa dihidangkan di atas meja makan, yaitu daging domba yang dikombinasikan dengan nasi dan juga sayur yang diolah dengan cara tradisional. Makanan ini ternyata bukan hanya menjadi hidangan khas Lebaran di Arab Saudi lho. Negara seperti Suriah, Sudan, dan juga negara Arab lainnya juga menyiapkan hidangan ini di saat merayakan hari Lebaran.
 
-![Lebaran di India](https://res.cloudinary.com/yacloud/image/upload/v1621239981/articles%20pictures/lebaran3_f1me7l.png)
+![Lebaran di India](https://res.cloudinary.com/yacloud/image/upload/v1624709474/articles%20pictures/2021-05-17-mengintip-tradisi-unik-lebaran-di-berbagai-negara%20/lebaran3_gwv0p0.png)
 
 ### India dengan Siwaiyaan yang Menggiurkan
 
@@ -49,7 +49,7 @@ Kebanyakan muslim di India biasanya melaksanakan salat Idulfitri di masjid yang 
 
 Jika Indonesia memiliki ketupat dan opor sebagai hidangan khas Lebaran, India tak kalah unik dengan Siwaiyaan yang menjadi makanan andalan untuk disantap pada saat Lebaran. Siwaiyaan adalah sebuah santapan berisi campuran bihun manis yang disajikan dengan susu dan buah-buahan kering. Selain Siwaiyaan, ada juga Sheer Khurma dan juga Servai yang tidak kalah nikmatnya. Hidangan-hidangan ini adalah menu yang sangat wajib untuk dihidangkan saat Lebaran.
 
-![Sholat Ied di Amerika Serikat](https://res.cloudinary.com/yacloud/image/upload/v1621239979/articles%20pictures/lebaran4_oqqjmh.png)
+![Sholat Ied di Amerika Serikat](https://res.cloudinary.com/yacloud/image/upload/v1624709474/articles%20pictures/2021-05-17-mengintip-tradisi-unik-lebaran-di-berbagai-negara%20/lebaran4_xbae2q.png)
 
 ### Suasana Lebaran di Negeri Paman Sam
 
