--- a/posts/mengulik-sejarah-depok-dan-1000-alasan-untuk-menertawakannya.mdx
+++ b/posts/mengulik-sejarah-depok-dan-1000-alasan-untuk-menertawakannya.mdx
@@ -1,9 +1,9 @@
 ---
-slug: 'mengulik-sejarah-depok-dan-1000-alasan-untuk-menertawakannya'
-title: 'Mengulik Sejarah Depok dan 1000 Alasan untuk Menertawakannya'
+slug: "mengulik-sejarah-depok-dan-1000-alasan-untuk-menertawakannya"
+title: "Mengulik Sejarah Depok dan 1000 Alasan untuk Menertawakannya"
 featuredpost: false
-featuredimageurl: https://res.cloudinary.com/yacloud/image/upload/v1620798245/articles%20pictures/depok_syhukw.jpg
-excerpt: 'Seminggu terakhir ini timeline di Twitter dan media sosial lainnya dipenuhi dengan berbagai meme dan tulisan yang mencandai tingkah laku warga Depok. Percayalah Depok, walaupun saya sedikit ikut menertawakan candaan mereka, saya juga bisa merasakan hal yang sedang kalian rasakan sekarang. Jadi, santai saja.'
+featuredimageurl: "https://res.cloudinary.com/yacloud/image/upload/v1624709550/articles%20pictures/2021-05-12-mengulik-sejarah-depok-dan-1000-alasan-untuk-menertawakannya/depok_urf4qg.jpg"
+excerpt: "Seminggu terakhir ini timeline di Twitter dan media sosial lainnya dipenuhi dengan berbagai meme dan tulisan yang mencandai tingkah laku warga Depok. Percayalah Depok, walaupun saya sedikit ikut menertawakan candaan mereka, saya juga bisa merasakan hal yang sedang kalian rasakan sekarang. Jadi, santai saja."
 date: 2021-05-12
 author: bayu-adji-nugraha
 tags: knowledge
@@ -13,7 +13,7 @@ Sebagai warga Bekasi yang sudah kebal terhadap berbagai _bully_-an netizen, saya
 
 Kehebohan nasional ini dipantik dengan kejadian ditangkapnya seekor babi hutan yang masuk ke lingkungan warga. Karena keresahan warga yang katanya sering kehilangan uang dan bingung dari mana asal babi tersebut, sepertinya mereka langsung berspekulasi bahwa babi tersebut adalah jelmaan dari manusia yang disebut sebagai “babi ngepet”. Hal tersebut tentu saja menghebohkan jagat maya, bahkan sampai menjadi _trending_ di beberapa media sosial di Indonesia. Setelah ditelusuri lebih lanjut oleh pihak berwajib, ternyata babi yang telah tertangkap dan disembelih itu sebenarnya adalah _pure_ babi dan bukan jelmaan dari manusia seperti yang dibicarakan oleh warga Depok sebelumnya. Salah satu kiriman yang ramai di media sosial adalah sebuah penelusuran tidak ilmiah kiriman [@whenscarves](https://twitter.com/whenscarves) melalui akun Twitternya yang mendapatkan ribuan _likes_ dan _retweet_ dari warganet.
 
-![enter image description here](https://res.cloudinary.com/yacloud/image/upload/v1620798567/articles%20pictures/depok_1_eqm8xt.png)
+![enter image description here](https://res.cloudinary.com/yacloud/image/upload/v1624709550/articles%20pictures/2021-05-12-mengulik-sejarah-depok-dan-1000-alasan-untuk-menertawakannya/depok_1_qhbazf.png)
 
 Setelah melihat “_Timeline_ Sejarah Depok” buatan netizen tersebut, kita bisa mengetahui bahwa ini bukanlah kali pertama Depok menjadi sorotan di Indonesia. Kita juga dapat melihat banyak peristiwa lainnya yang ditulis di artikel, media sosial, dan juga banyak dibahas oleh _Youtuber_ di kanal Youtube-nya. Mulai dari kisah _urban legend_ yang melekat pada masyarakatnya, keunikan tingkah laku warganya, sampai dengan kebijakan wali kotanya yang menuai komentar pro-kontra dari warga sekitar maupun warga Depok sendiri. Walaupun Depok memiliki banyak celah untuk menjadi bahan _bully_-an netizen, tapi sepertinya nanti warga akan kembali melupakannya lalu hanya berfokus untuk merundung Bekasi yang letaknya berada di luar tata surya. Saya sih tidak apa-apa, saya yakin mereka belum pernah _dengerin_ lagunya Young Lex yang judulnya “Bekasi” (bukan lagu yang direkomendasikan).
 
@@ -39,7 +39,7 @@ Begitulah kurang lebih sejarah singkat terlahirnya Kota Depok. Untuk _sobat Ya!_
 
 Dari tulisan ini kita bisa ambil kesimpulan bahwa wajah Depok yang dulu dengan Depok yang sekarang tentu saja berbeda. Banyak sekali gonjang-ganjing serta peristiwa-peristiwa terjadi di sana yang menjadikan Depok menjadi Depok yang sekarang dan tentunya semakin menjadi lebih baik (babi ngepet dan kolor ijo itu urusan lain). Mungkin cukup sekian pembahasan saya tentang kota yang memiliki kamus bahasa yang hampir sama dengan Bekasi ini. Semoga teman-teman sekalian tidak sembarang mem-_bully_ Kota Depok lagi, tetapi juga bisa mengambil pelajaran dari tulisan saya ini (agar mem-_bully_-nya bisa lebih baik lagi _xixixi_). Terakhir, seperti biasa tulisan saya ini akan ditutup dengan pantun. _Ekhem..._ (shb)
 
-<p style={{ textAlign: 'center', fontStyle: 'italic' }}>
+<p style={{ textAlign: "center", fontStyle: "italic" }}>
   Lihat Chastelein bawa golok
   <br />
   Goloknya beli di Pondok Karet
