--- a/posts/plesiran-menuju-eropa-menjangkau-edirne.mdx
+++ b/posts/plesiran-menuju-eropa-menjangkau-edirne.mdx
@@ -1,8 +1,8 @@
 ---
-slug: 'plesiran-menuju-eropa-menjangkau-edirne'
-title: 'Plesiran Menuju Eropa: Menjangkau Edirne'
+slug: "plesiran-menuju-eropa-menjangkau-edirne"
+title: "Plesiran Menuju Eropa: Menjangkau Edirne"
 featuredpost: false
-featuredimageurl: https://upload.wikimedia.org/wikipedia/commons/thumb/0/0f/Selimiye_Mosque_%2815051985908%29_%28cropped%29.jpg/800px-Selimiye_Mosque_%2815051985908%29_%28cropped%29.jpg
+featuredimageurl: "https://res.cloudinary.com/yacloud/image/upload/v1624709712/articles%20pictures/2020-02-03-plesiran-menuju-eropa-menjangkau-edirne/plesiran_menuju_eropa_s24ouo.jpg"
 excerpt: Entah apa yang membawa langkah kakiku menuju ibu kota Utsmani ke-2, Edirne.
 date: 2020-02-03
 author: xequoia
