--- a/posts/ramadan-pandemic-2.mdx
+++ b/posts/ramadan-pandemic-2.mdx
@@ -1,9 +1,9 @@
 ---
-slug: 'ramadan-pandemic-2'
-title: 'Ramadan Pandemic 2.0'
+slug: "ramadan-pandemic-2"
+title: "Ramadan Pandemic 2.0"
 featuredpost: false
-featuredimageurl: https://images.unsplash.com/photo-1618383406944-0df8186c3aff?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=401&q=80
-excerpt: 'Ramadhan adalah bulan healing, bulannya memanusiakan manusia. Banyak sekali hal yang bisa kita lakukan dalam memanusiakan diri kita. Terutama ketika masa pandemi seperti ini.'
+featuredimageurl: https://res.cloudinary.com/yacloud/image/upload/v1624709980/articles%20pictures/2021-05-11-ramadan-pandemic-2/ramadhan_pandemic_wyfxfl.jpg
+excerpt: "Ramadhan adalah bulan healing, bulannya memanusiakan manusia. Banyak sekali hal yang bisa kita lakukan dalam memanusiakan diri kita. Terutama ketika masa pandemi seperti ini."
 date: 2021-05-11
 author: amara-salsabila
 tags: opini
