--- a/posts/rehat-indorsagraphy.mdx
+++ b/posts/rehat-indorsagraphy.mdx
@@ -2,7 +2,7 @@
 slug: "rehat-indorsagraphy"
 title: "REHAT"
 featuredpost: true
-featuredimageurl: https://res.cloudinary.com/yacloud/image/upload/v1622362804/articles%20pictures/Rehat_dvpxaa.jpg
+featuredimageurl: "https://res.cloudinary.com/yacloud/image/upload/v1624710042/articles%20pictures/2021-05-30-rehat-indorsagraphy/Rehat_dvpxaa_sme9mq.jpg"
 excerpt: "REHAT, Sebuah kolaborasi karya dari fotografer pelajar Indonesia di Turki dalam memaknai kata REHAT yang diabadikan melalui karya foto-foto terbaik mereka."
 date: 2021-05-30
 author: ya-magz
