--- a/posts/resep-bubur-sumsum-praktis-enggak-pakai-ribet.mdx
+++ b/posts/resep-bubur-sumsum-praktis-enggak-pakai-ribet.mdx
@@ -1,11 +1,11 @@
 ---
-slug: 'resep-bubur-sumsum-praktis-enggak-pakai-ribet'
-title: 'Resep Bubur Sumsum Praktis Enggak Pakai Ribet'
+slug: "resep-bubur-sumsum-praktis-enggak-pakai-ribet"
+title: "Resep Bubur Sumsum Praktis Enggak Pakai Ribet"
 featuredpost: false
-featuredimage: ''
-featuredimageurl: 'https://res.cloudinary.com/yacloud/image/upload/v1621238451/articles%20pictures/bubur-sumsum-nice-for-kids_dwanzu.jpg'
-imgsource: 'instagram/niceforkids57'
-excerpt: 'Bubur sumsum adalah salah satu makanan Indonesia yang banyak digemari terutama oleh para pencinta makanan manis. Selain teksturnya yang lembut dan rasanya yang manis, bubur sumsum juga memiliki beberapa manfaat.'
+featuredimage: ""
+featuredimageurl: "https://res.cloudinary.com/yacloud/image/upload/v1624710100/articles%20pictures/2021-05-23-resep-bubur-sumsum-praktis-enggak-pakai-ribet/bubur-sumsum-nice-for-kids_peo9mx.jpg"
+imgsource: "instagram/niceforkids57"
+excerpt: "Bubur sumsum adalah salah satu makanan Indonesia yang banyak digemari terutama oleh para pencinta makanan manis. Selain teksturnya yang lembut dan rasanya yang manis, bubur sumsum juga memiliki beberapa manfaat."
 date: 2021-05-23
 author: ahsanah-nur-amalia
 tags: lifehacks
