--- a/posts/vaksin.mdx
+++ b/posts/vaksin.mdx
@@ -1,9 +1,9 @@
 ---
-slug: 'vaksin'
-title: 'Vaksin'
+slug: "vaksin"
+title: "Vaksin"
 featuredpost: true
-featuredimageurl: https://images.pexels.com/photos/2652088/pexels-photo-2652088.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940
-excerpt: 'Jika boleh memberikan saran, kenapa sobat hanya fokus memberikan vaksin pada penyakit yang merenggut jiwa manusia? Bagaimana dengan vaksin yang mengikis akhlak manusia?'
+featuredimageurl: "https://res.cloudinary.com/yacloud/image/upload/v1624710362/articles%20pictures/2021-04-11-vaksin/vaksin_rohani_xeahgh.jpg"
+excerpt: "Jika boleh memberikan saran, kenapa sobat hanya fokus memberikan vaksin pada penyakit yang merenggut jiwa manusia? Bagaimana dengan vaksin yang mengikis akhlak manusia?"
 date: 2021-04-11
 author: aksara-gedrik
 tags: religion
