--- a/posts/welcoming-ramadhan.mdx
+++ b/posts/welcoming-ramadhan.mdx
@@ -1,10 +1,10 @@
 ---
-slug: 'welcoming-ramadhan'
-title: 'Welcoming Ramadhan'
+slug: "welcoming-ramadhan"
+title: "Welcoming Ramadhan"
 featuredpost: false
-featuredimage: ''
-featuredimageurl: 'https://images.unsplash.com/photo-1570206913724-17f67ed3a6d6?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=956&q=80'
-excerpt: 'Hai, Sobat Ya! Bulan ini sudah masuk bulan Rajab, loh. Waktu cepat sekali ya jalannya, udah mau masuk bulan Ramadhan aja nih. Kira-kira Ramadhan tahun ini bagi sobat Ya! akan seperti apa nih?'
+featuredimage: ""
+featuredimageurl: "https://res.cloudinary.com/yacloud/image/upload/v1624710395/articles%20pictures/2021-04-01-welcoming-ramadhan/welcoming_ramadhan_j2exju.jpg"
+excerpt: "Hai, Sobat Ya! Bulan ini sudah masuk bulan Rajab, loh. Waktu cepat sekali ya jalannya, udah mau masuk bulan Ramadhan aja nih. Kira-kira Ramadhan tahun ini bagi sobat Ya! akan seperti apa nih?"
 date: 2021-04-01
 author: jovita-yosandra
 tags: lifestyle
