--- a/posts/aturan-baru-bea-cukai.mdx
+++ b/posts/aturan-baru-bea-cukai.mdx
@@ -3,7 +3,7 @@ slug: "aturan-baru-bea-cukai"
 title: "Aturan Baru Bea Cukai"
 featuredpost: false
 featuredimage: ""
-featuredimageurl: "https://images.unsplash.com/photo-1578335371893-da19ce4ba0cc?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
+featuredimageurl: "https://res.cloudinary.com/yacloud/image/upload/v1624709058/articles%20pictures/2021-04-19-aturan-baru-bea-cukai/bea_cukai_jyjr5k.jpg"
 excerpt: "Berbelanja barang dari luar negeri? Mengirim barang masuk ke Indonesia? Siapa tahu dengan artikel ini bisa menambah wawasan kita semua."
 date: 2021-04-19
 author: hisyam-azhari
