--- a/posts/gaia.mdx
+++ b/posts/gaia.mdx
@@ -1,46 +1,46 @@
 ---
-slug: 'gaia'
-title: 'Gaia'
+slug: "gaia"
+title: "Gaia"
 date: 2021-05-06
 author: dammy
-featuredimageurl: 'https://images.unsplash.com/photo-1517598499378-be07cbf2e1d0?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=401&q=80'
-imgsource: 'unsplash.com/@salminenjuuso'
+featuredimageurl: "https://res.cloudinary.com/yacloud/image/upload/v1624708985/articles%20pictures/2021-05-06-gaia/gaia_a7oxmy.jpg"
+imgsource: "unsplash.com/@salminenjuuso"
 tags: art
 ---
 
 <div>Aku adalah sebersit makna tersembunyi</div>
 <div>Yang memaksa semua orang untuk mengerti</div>
 <div>Aku adalah metaphor yang berdiri sendiri</div>
-<div className='end-p'>Pahami aku, maka aku akan jatuh pada palung diri</div>
+<div className="end-p">Pahami aku, maka aku akan jatuh pada palung diri</div>
 
 <div>Aku adalah jarum di dalam tumpukan jerami</div>
 <div>Jika kau cari dan temukan, kau tidak akan cukup mengerti</div>
 <div>Apa alasan aku ada di dalam sana?</div>
-<div className='end-p'>Dan apa alasan kau merenggutku darinya?</div>
+<div className="end-p">Dan apa alasan kau merenggutku darinya?</div>
 
 <div>Aku adalah apa yang tak terucap</div>
 <div>Memaksa engkau untuk mengecap apa saja yang semestinya meluap</div>
 <div>Aku adalah paksaan itu sendiri</div>
-<div className='end-p'>Membuat kau mamatung dan tak mungkin berlari</div>
+<div className="end-p">Membuat kau mamatung dan tak mungkin berlari</div>
 
 <div>Tapi, di samping itu semua, aku adalah kelembutan</div>
 <div>Yang membawamu ke dalam buaian</div>
 <div>Aku juga adalah persaaan yang tulus</div>
-<div className='end-p'>Walau terkadang sangat bergantung pada fulus</div>
+<div className="end-p">Walau terkadang sangat bergantung pada fulus</div>
 
 <div>Aku menyukai kesederhanaan dan keorisinilan</div>
 <div>Yang dalam standarku adalah istana dan gunung bercahaya keemasan</div>
 <div>Aku adalah keindahan itu sendiri</div>
-<div className='end-p'>
+<div className="end-p">
   Jangan coba-coba mencerca, karena itu berarti bunuh diri
 </div>
 
 <div>Bagaimanapun aku menurutmu</div>
 <div>Aku adalah aku</div>
 <div>Dengan segenap kekuatan perasaan</div>
-<div className='end-p'>Yang menciptakan digdaya sistem pemerintahan</div>
+<div className="end-p">Yang menciptakan digdaya sistem pemerintahan</div>
 
 <div>Mau tak mau, kau harus mau</div>
 <div>Untuk tunduk pada kehendak perasaanku</div>
 <div>Karena jika tidak, kamu harus tahu</div>
-<div className='end-p'>Bahwa aku adalah kehendak atas dirimu</div>
+<div className="end-p">Bahwa aku adalah kehendak atas dirimu</div>
