--- a/posts/geisha-penghibur-yang-sering-disalah-artikan.mdx
+++ b/posts/geisha-penghibur-yang-sering-disalah-artikan.mdx
@@ -3,7 +3,7 @@ slug: "geisha-penghibur-yang-sering-disalah-artikan"
 title: "Geisha, Penghibur yang Sering Disalah Artikan"
 featuredpost: false
 excerpt: "Mendengar kata Geisha, sering kali yang terbayang di pikiran kita adalah para perempuan Jepang yang mengenakan Kimono dengan riasan wajah putih."
-featuredimageurl: "https://images.unsplash.com/photo-1600027723567-ca095700f2f1?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=634&q=80"
+featuredimageurl: "https://res.cloudinary.com/yacloud/image/upload/v1624708951/articles%20pictures/2021-05-06-geisha-penghibur-yang-sering-disalah-artikan/geisha_gyrkhz.jpg"
 date: 2021-05-06
 author: himura-taiyou
 tags: knowledge
