--- a/posts/jangan-kuliah-di-turki.mdx
+++ b/posts/jangan-kuliah-di-turki.mdx
@@ -1,10 +1,10 @@
 ---
-slug: 'jangan-kuliah-di-turki'
-title: 'Peringatan: Jangan Kuliah di Turki'
+slug: "jangan-kuliah-di-turki"
+title: "Peringatan: Jangan Kuliah di Turki"
 featuredpost: true
-featuredimage: ''
-featuredimageurl: 'https://res.cloudinary.com/yacloud/image/upload/v1618834927/articles%20pictures/uludag-min_ipnsai.jpg'
-excerpt: 'Pergi kuliah ke luar negeri ternyata tak seindah yang dibayangkan. Pergi kuliah ke luar negeri juga tak seindah foto di Instagram.'
+featuredimage: ""
+featuredimageurl: "https://res.cloudinary.com/yacloud/image/upload/v1624708625/articles%20pictures/2021-04-19-jangan-kuliah-di-turki/uludag-min_ipnsai_1_meg2pd.jpg"
+excerpt: "Pergi kuliah ke luar negeri ternyata tak seindah yang dibayangkan. Pergi kuliah ke luar negeri juga tak seindah foto di Instagram."
 date: 2021-04-19
 author: dammy
 tags: opini
