--- a/posts/menjadi-indonesia.mdx
+++ b/posts/menjadi-indonesia.mdx
@@ -1,9 +1,8 @@
 ---
-slug: 'menjadi-indonesia'
-title: 'Menjadi Indonesia'
+slug: "menjadi-indonesia"
+title: "Menjadi Indonesia"
 featuredpost: true
-featuredimage: ''
-featuredimageurl: 'https://images.unsplash.com/photo-1502977266157-4dbae1582d9f?ixid=MXwxMjA3fDB8MHxzZWFyY2h8Mzh8fGluZG9uZXNpYSUyMGZsYWd8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60'
+featuredimageurl: "https://res.cloudinary.com/yacloud/image/upload/v1624709592/articles%20pictures/2020-08-19-menjadi-indonesia/menjadi_indonesia_duaxdu.jpg"
 excerpt: Menurut Anderson, seorang Indonesianis yang berpendapat tentang kebangsaan orang Indonesia tercipta karena adanya print-language yaitu Bahasa Indonesia.
 date: 2020-08-19
 author: jelang-ramadhan
