--- a/posts/once-upon-a-try-virtual-museum.mdx
+++ b/posts/once-upon-a-try-virtual-museum.mdx
@@ -2,8 +2,7 @@
 slug: "once-upon-a-try-virtual-museum"
 title: "Once Upon A Try Virtual Museum"
 featuredpost: false
-featuredimage: ""
-featuredimageurl: "https://images.unsplash.com/photo-1564408918432-4b93b213cfb5?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1189&q=80"
+featuredimageurl: "https://res.cloudinary.com/yacloud/image/upload/v1624709627/articles%20pictures/2020-05-01-once-upon-a-try-virtual-museum/virtual_museum_avi4l7.jpg"
 excerpt: "Selama menjalani masa self quarantine, banyak hal yang dapat kita lakukan dirumah saja, salah satunya kita dapat melakukan virtual tour."
 date: 2020-05-01
 author: adinda-pancaring
