--- a/posts/pahlawan-tanah-pasundan.mdx
+++ b/posts/pahlawan-tanah-pasundan.mdx
@@ -1,10 +1,10 @@
 ---
-slug: 'pahlawan-tanah-pasundan'
-title: 'Pahlawan Tanah Pasundan'
+slug: "pahlawan-tanah-pasundan"
+title: "Pahlawan Tanah Pasundan"
 featuredpost: false
-featuredimage: ''
-featuredimageurl: 'https://res.cloudinary.com/yacloud/image/upload/v1619416576/articles%20pictures/Raden_Dewi_Sartika_tozsdc.jpg'
-excerpt: 'Peringatan Hari Kartini yang jatuh pada 21 April semoga benar-benar dimaknai lebih dalam dari ucapan “Selamat Hari Kartini.'
+featuredimage: ""
+featuredimageurl: "https://res.cloudinary.com/yacloud/image/upload/v1624709680/articles%20pictures/2021-04-26-pahlawan-tanah-pasundan/Raden_Dewi_Sartika_v1gqc0.jpg"
+excerpt: "Peringatan Hari Kartini yang jatuh pada 21 April semoga benar-benar dimaknai lebih dalam dari ucapan “Selamat Hari Kartini."
 date: 2021-04-26
 author: ghoniyyah-salma
 tags: knowledge
