--- a/posts/prusa-dari-bursa-untuk-bangsa.mdx
+++ b/posts/prusa-dari-bursa-untuk-bangsa.mdx
@@ -1,10 +1,9 @@
 ---
-slug: 'prusa-dari-bursa-untuk-bangsa'
-title: 'PRUSA: Dari Bursa Untuk Bangsa'
+slug: "prusa-dari-bursa-untuk-bangsa"
+title: "PRUSA: Dari Bursa Untuk Bangsa"
 featuredpost: true
-featuredimage: ''
-featuredimageurl: 'https://res.cloudinary.com/yacloud/image/upload/v1618834927/articles%20pictures/uludag-min_ipnsai.jpg'
-excerpt: 'Perhimpunan Pelajar Indonesia di Bursa-Turki (PPI Bursa) telah sukses melaksanakan kegiatan berbasis pengabdian masyarakat bernama Pelajar Bursa untuk Indonesia (PRUSA) pada tanggal 16-22 Agustus 2019 di Desa Mekarmanik, Kabupaten Lebak, Provinsi Banten.'
+featuredimageurl: "https://res.cloudinary.com/yacloud/image/upload/v1624709912/articles%20pictures/2021-04-19-prusa-dari-bursa-untuk-bangsa/prusa_pouh3b.jpg"
+excerpt: "Perhimpunan Pelajar Indonesia di Bursa-Turki (PPI Bursa) telah sukses melaksanakan kegiatan berbasis pengabdian masyarakat bernama Pelajar Bursa untuk Indonesia (PRUSA) pada tanggal 16-22 Agustus 2019 di Desa Mekarmanik, Kabupaten Lebak, Provinsi Banten."
 date: 2021-04-19
 author: annfir
 tags: news
