--- a/posts/sejarah-vaksin-dunia.mdx
+++ b/posts/sejarah-vaksin-dunia.mdx
@@ -1,8 +1,8 @@
 ---
-slug: 'sejarah-vaksin-dunia'
-title: 'Sejarah Vaksin Dunia'
+slug: "sejarah-vaksin-dunia"
+title: "Sejarah Vaksin Dunia"
 featuredpost: true
-featuredimageurl: https://images.unsplash.com/photo-1605377347958-e8bd4c00ba1d?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=700&q=80
+featuredimageurl: "https://res.cloudinary.com/yacloud/image/upload/v1624710173/articles%20pictures/2021-04-05-sejarah-vaksin-dunia/vaksin_dunia_nxjhx3.jpg"
 excerpt: Akhir Desember 2019, dunia digemparkan dengan penemuan virus yang dapat menyebar dengan cepat. Kasus pertama terjadi di Kota Wuhan, Cina. Virus itu bernama virus corona atau 2019-nCoV.
 date: 2021-04-05
 author: dammy
