--- a/posts/spring-fragrances-2021.mdx
+++ b/posts/spring-fragrances-2021.mdx
@@ -1,9 +1,9 @@
 ---
-slug: 'spring-fragrances-2021'
-title: 'Spring Fragrances 2021'
+slug: "spring-fragrances-2021"
+title: "Spring Fragrances 2021"
 featuredpost: false
-featuredimageurl: https://images.unsplash.com/photo-1462275646964-a0e3386b89fa?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1100&q=80
-excerpt: 'Spring time is coming!!! Meski masa pandemi belum berakhir, semoga perpaduan aroma bunga dan tanah kering yang dijatuhi hujan musim semi ditemani dengan minuman hangat dapat memperbaiki mood Sobat Ya!, yah'
+featuredimageurl: "https://res.cloudinary.com/yacloud/image/upload/v1624710215/articles%20pictures/2021-04-11-spring-fragrances-2021/spring_fragnances_idarsf.jpg"
+excerpt: "Spring time is coming!!! Meski masa pandemi belum berakhir, semoga perpaduan aroma bunga dan tanah kering yang dijatuhi hujan musim semi ditemani dengan minuman hangat dapat memperbaiki mood Sobat Ya!, yah"
 date: 2021-04-11
 author: ahsanah-nur-amalia
 tags: lifestyle
@@ -13,28 +13,28 @@ Halo, _Sobat Ya!_ Tak terasa kini kita telah memasuki bulan April di tahun 2021.
 
 1. Original Source Vanilla & Raspberry Body Mist
 
-![Original Source Vanilla & Raspberry Body Mist](https://res.cloudinary.com/yacloud/image/upload/v1618140198/articles%20pictures/spring-fragnances-1_cihq4g.jpg)
+![Original Source Vanilla & Raspberry Body Mist](https://res.cloudinary.com/yacloud/image/upload/v1624710217/articles%20pictures/2021-04-11-spring-fragrances-2021/spring-fragnances-1_rwuax1.jpg)
 Sumber: [https://instagram.com/originalsourceid](https://instagram.com/originalsourceid)
 
 _Body mist_ ini memiliki aroma yang sangat manis. Perpaduan aroma _vanilla_ dan buah _raspberry_ nya dapat membuat _Sobat Ya!_ lebih semangat menjalani hari. Harganya juga cukup terjangkau, _Sobat Ya!_ tidak harus merogoh uang terlalu banyak. Selain itu, produk ini juga tidak diujikan pada hewan dan bebas paraben, jadi aman untuk dipakai sehari-hari.
 
 2. Evangeline Black Sakura
 
-![Evangeline Black Sakura](https://res.cloudinary.com/yacloud/image/upload/v1618140198/articles%20pictures/spring-fragnances-2_quamam.jpg)
+![Evangeline Black Sakura](https://res.cloudinary.com/yacloud/image/upload/v1624710216/articles%20pictures/2021-04-11-spring-fragrances-2021/spring-fragnances-2_kdcsab.jpg)
 Sumber: [https://instagram.com/evangeline.id](https://instagram.com/evangeline.id)
 
 Parfum ini memiliki aroma yang manis dan segar. Kemasannya yang berwarna hitam membuat parfum ini terlihat sangat elegan. Tidak hanya Black Sakura, Evangeline juga memiliki rangkain seri Sakura lainnya, yaitu Pink Sakura, Blue Sakura, Red Sakura, Purple Sakura, dan White Sakura. Tapi favoritku adalah Black Sakura. Favorit kalian yang mana nih, _Sobat Ya!?_
 
 3. ZARA Wonder Rose
 
-![enter image description here](https://res.cloudinary.com/yacloud/image/upload/v1618149368/articles%20pictures/zara_gvsjvk.jpg)
+![enter image description here](https://res.cloudinary.com/yacloud/image/upload/v1624710216/articles%20pictures/2021-04-11-spring-fragrances-2021/spring-fragnances-3_trjczc.jpg)
 Sumber: [https://instagram.com/zara](https://instagram.com/zara)
 
 Kali ini parfumnya datang dari salah satu brand yang sangat terkenal, yaitu ZARA. Bagi _Sobat Ya!_ yang menyukai aroma _feminine_ dan _floral, this is for you guys_. Perpaduan aroma _peach_, _red berries, rose, violet, cedar wood, vanilla,_ dan _musk_ menghasilkan aroma yang semerbak. Pada semprotan pertama kalian mungkin akan merasa wanginya cukup menyengat, namun setelah beberapa lama wanginya akan melembut dan cukup tahan lama walau _Sobat Ya!_ beraktivitas di luar ruangan.
 
 4. Jo Malone London English Peer and Freesia
 
-![Jo Malone London English Peer and Freesia](https://res.cloudinary.com/yacloud/image/upload/v1618140565/articles%20pictures/spring-fragnances-4_latp0f.jpg)
+![Jo Malone London English Peer and Freesia](https://res.cloudinary.com/yacloud/image/upload/v1624710217/articles%20pictures/2021-04-11-spring-fragrances-2021/spring-fragnances-4_wuxmjx.jpg)
 Sumber: [https://instagram.com/jomalonelondon](https://instagram.com/jomalonelondon)
 
 Parfum yang satu ini memilik aroma yang sangat unik dan khas. Ini juga salah satu parfum Jo Malone yang paling favorit dan sangat disukai banyak orang. Bahkan para YouTuber dan Blogger juga banyak yang membahas dan merekomendasikan parfum ini. Parfum ini juga sangat cocok untuk acara formal maupun nonformal.
