--- a/posts/suara.mdx
+++ b/posts/suara.mdx
@@ -1,62 +1,62 @@
 ---
-slug: 'suara'
-title: 'Suara'
+slug: "suara"
+title: "Suara"
 date: 2021-05-11
 author: annfir
-featuredimageurl: 'https://images.unsplash.com/photo-1586830746542-19b25c53497f?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=425&q=80'
-imgsource: 'unsplash.com/@allecgomes'
+featuredimageurl: "https://res.cloudinary.com/yacloud/image/upload/v1624710286/articles%20pictures/2021-05-11-suara/suara_p2duho.jpg"
+imgsource: "unsplash.com/@allecgomes"
 tags: art
 ---
 
 <div>Satu</div>
 <div>Dua kali</div>
-<div className='end-p'>Masih terdengar</div>
+<div className="end-p">Masih terdengar</div>
 
 <div>Tuts piano itu berdenting</div>
 <div>Sedang jarum terus berdetak</div>
 <div>Langit jadi genting</div>
-<div className='end-p'>Siapa berani menggertak</div>
+<div className="end-p">Siapa berani menggertak</div>
 
 <div>Anjing-anjing kelaparan</div>
 <div>Bola terbang di pupil matanya</div>
 <div>Tulang-tulang berkeliaran</div>
 <div>Tapi kepalanya diserbu ribuan tanya</div>
-<div className='end-p'>Belum saatnya</div>
+<div className="end-p">Belum saatnya</div>
 
 <div>Kali ini derap langkah kaki</div>
 <div>Kadang wujudnya besar</div>
 <div>Memanggil</div>
 <div>Berpesan</div>
 <div>Doa terlampir</div>
-<div className='end-p'>Pada tali yang diulur</div>
+<div className="end-p">Pada tali yang diulur</div>
 
 <div>Lain hari wujudnya kecil</div>
 <div>Berlari</div>
 <div>Mengejar</div>
 <div>Melempar</div>
 <div>Siapa paling tinggi</div>
-<div className='end-p'>Tawanya paling menggelegar</div>
+<div className="end-p">Tawanya paling menggelegar</div>
 
 <div>Ia dekat</div>
 <div>Paling dekat</div>
 <div>Tepat di balik dinding</div>
 <div>Tak tahu waktu</div>
-<div className='end-p'>Meraung sepanjang hari</div>
+<div className="end-p">Meraung sepanjang hari</div>
 
 <div>Kemudian meninggalkan teka-teki</div>
 <div>Lebih besarkah miliknya?</div>
 <div>Tanda apa yang ada di kertasnya?</div>
-<div className='end-p'>Adakah tanda tambah yang lebih kurang?</div>
+<div className="end-p">Adakah tanda tambah yang lebih kurang?</div>
 
 <div>Sekali lagi</div>
 <div>Anjing-anjing berduka</div>
 <div>Isaknya terdengar sepanjang malam</div>
 <div>Paling besar dari segalanya</div>
-<div className='end-p'>Termurung yang pernah ada</div>
+<div className="end-p">Termurung yang pernah ada</div>
 
 <div>Kita sama-sama sakit</div>
 <div>Di balik dinding berbukit</div>
 <div>Sebelum semuanya terjangkit</div>
 <div>Perahu terus kita rakit</div>
 <div>Sampai kapan, kamu mengungkit</div>
-<div className='end-p'>Hingga telinga terbangkit</div>
+<div className="end-p">Hingga telinga terbangkit</div>
