--- a/posts/titik-ekstrem-semu.mdx
+++ b/posts/titik-ekstrem-semu.mdx
@@ -1,33 +1,33 @@
 ---
-slug: 'titik-ekstrem-semu'
-title: 'Titik Ekstrem Abadi'
+slug: "titik-ekstrem-semu"
+title: "Titik Ekstrem Abadi"
 date: 2021-05-06
 author: dammy
-featuredimageurl: 'https://images.unsplash.com/reserve/aOcWqRTfQ12uwr3wWevA_14401305508_804b300054_o.jpg?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1055&q=80'
-imgsource: 'unsplash.com/@paulavermeulen'
+featuredimageurl: "https://res.cloudinary.com/yacloud/image/upload/v1624710327/articles%20pictures/2021-05-06-titik-ekstrem-semu/titik_ekstrem_semu_eyxmjv.jpg"
+imgsource: "unsplash.com/@paulavermeulen"
 tags: art
 ---
 
 <div>Di nusantara yang abadi</div>
 <div>Di mana penuh dengan ajaran budi pekerti</div>
 <div>Ajaran leluhur yang sangat sakti</div>
-<div className='end-p'>Ajakan penuh untuk saling mengerti</div>
+<div className="end-p">Ajakan penuh untuk saling mengerti</div>
 
 <div>Di tempat penuh dengan senyuman</div>
 <div>Hangat oleh suasana keramahtamahan</div>
 <div>Riuh oleh ruh keberagaman perbedaan</div>
-<div className='end-p'>
+<div className="end-p">
   Kunci utama rekatnya tali persatuan dan persaudaraan
 </div>
 
 <div>Di alam untuk saling memahami</div>
 <div>Dalam asuhan khusus ibu bumi</div>
 <div>Ada satu titik ekstrem yang melenyapkan kehangatan mentari</div>
-<div className='end-p'>Satu titik ekstrem, kemarahan tanpa ekspresi</div>
+<div className="end-p">Satu titik ekstrem, kemarahan tanpa ekspresi</div>
 
 <div>Adalah diam bentuk titik ekstrem itu</div>
 <div>Pembeku hangat mentari yang semu</div>
 <div>Jangan kamu picu pemicu diam itu</div>
-<div className='end-p'>
+<div className="end-p">
   Itu berbahaya untuk kenyamananmu yang juga semu, palsu.
 </div>
