refactor grid magazine

--- a/posts/rehat-indorsagraphy.mdx
+++ b/posts/rehat-indorsagraphy.mdx
@@ -20,5 +20,5 @@ tags: art
 
 Read now at:
 
-- Data friendly (compressed) version [link](https://drive.google.com/file/d/1KhDG9U282F20AU3Aon9hRdPg1xuV5PPu/view?usp=sharing)
-- Original (donwload or mobile app only) [link](https://drive.google.com/file/d/10QSrWx5Zz-UNpYmgb6YEThJ4rG4v9-ei/view?usp=sharing)
+- Data friendly (compressed) version [link](https://ya-magazine.com/redirect?url=https://drive.google.com/file/d/1KhDG9U282F20AU3Aon9hRdPg1xuV5PPu/view?usp=sharing)
+- Original (donwload or mobile app only) [link](https://ya-magazine.com/redirect?url=https://drive.google.com/file/d/10QSrWx5Zz-UNpYmgb6YEThJ4rG4v9-ei/view?usp=sharing)
